[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
uvloop = "^0.19.0"
tgcrypto = "^1.2.5"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
pydantic = "^2.7.2"
pyyaml = "^6.0.1"
types-pyyaml = "^6.0.12.20240311"
cachetools = "^5.3.3"
types-cachetools = "^5.3.0.7"
pyrofork = "^2.3.24"

[tool.poetry.dev-dependencies]
black = "^24.4.2"
ruff = "^0.4.6"
bandit = "^1.7.8"
flake8 = "^7.0.0"
flake8-pyprojecttoml = "^0.0.2"
isort = "^5.13.2"
pylint = "^3.2.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
coverage = "^7.5.3"

[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

[tool.black]
line-length = 88
exclude = 'README\.md'

[tool.flake8]
max-line-length = 88

[tool.ruff]
line-length = 88

[tool.pylint]
disable = [
    "missing-docstring",
    "no-else-return",
    "no-else-raise",
    "useless-return",
]
max-line-length = 88

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("src")'

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:There is no current event loop:DeprecationWarning"
]
pythonpath = "src"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
